Set token to local storage

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = https://two02204-w6chwe-elias-heresi.onrender.com/robots
+REACT_APP_API_URL = https://two02204-w6chwe-elias-heresi.onrender.com
 REACT_APP_TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Imxlb25jb3YiLCJpYXQiOjE2NTI3MTI0OTN9.wNpbGS2ZOtWV-OYXUYwoi2em1uRoeuLR9-ZvyucpvHE
